# plugin-endpoints

./: meson.build  package.scm
discordpp/: plugin-endpoints.hh
