project('discordpp-plugin-endpoints', 'cpp')

install_headers(
	[
		'discordpp/plugin-endpoints.hh'
	],
	subdir : 'discordpp'
)
install_headers(
	[
		'discordpp/categories/application-commands.hh',
		'discordpp/categories/audit-log.hh',
		'discordpp/categories/channel.hh',
		'discordpp/categories/emoji.hh',
		'discordpp/categories/guild.hh',
		'discordpp/categories/guild-template.hh',
		'discordpp/categories/invite.hh',
		'discordpp/categories/receiving-and-responding.hh',
		'discordpp/categories/stage-instance.hh',
		'discordpp/categories/sticker.hh',
		'discordpp/categories/user.hh',
		'discordpp/categories/voice.hh',
		'discordpp/categories/webhook.hh'
	],
	subdir : 'discordpp/categories'
)
		
